[gd_scene load_steps=5 format=3 uid="uid://eus2s5agc407"]

[ext_resource type="PackedScene" uid="uid://ckbx4514u3tl6" path="res://scenes/levels/level.tscn" id="1_dtc8p"]
[ext_resource type="Script" path="res://scenes/levels/first_room_updated.gd" id="2_0i36j"]
[ext_resource type="PackedScene" uid="uid://c8o4e8o1yvwor" path="res://scenes/levels/first_room.tscn" id="2_x1nx4"]
[ext_resource type="PackedScene" uid="uid://coodhe5k47vkg" path="res://scenes/enemies/sewerRat.tscn" id="3_xauum"]

[node name="first_room_updated" instance=ExtResource("1_dtc8p")]
script = ExtResource("2_0i36j")

[node name="firstRoom" parent="." index="0" instance=ExtResource("2_x1nx4")]

[node name="sewerRat" parent="." index="3" instance=ExtResource("3_xauum")]

[node name="DirectionalLight2D2" type="DirectionalLight2D" parent="Lights" index="0"]
color = Color(0.8, 0.8, 0.8, 1)
blend_mode = 1

[connection signal="player_entered_door" from="firstRoom" to="." method="_on_first_room_player_entered_door"]
[connection signal="player_exit_door" from="firstRoom" to="." method="_on_first_room_player_exit_door"]
[connection signal="sewer_entrance" from="firstRoom" to="." method="_on_first_room_sewer_entrance"]
[connection signal="sewer_exit" from="firstRoom" to="." method="_on_first_room_sewer_exit"]
